[gd_scene load_steps=7 format=1]

[ext_resource path="res://CommonScenes/Buttons/ArrowsIndicator.gd" type="Script" id=1]
[ext_resource path="res://CommonScenes/OptionsMenu/png/arrow.png" type="Texture" id=2]
[ext_resource path="res://CommonScenes/OptionsMenu/png/arrow_pressed.png" type="Texture" id=3]
[ext_resource path="res://CommonScenes/OptionsMenu/png/arrow_hover.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("RightArrow:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightArrow:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LeftArrow:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LeftArrow:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=2]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("LeftArrow:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftArrow:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RightArrow:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RightArrow:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="ArrowsIndicator" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="RightArrow" type="TextureButton" parent="."]

anchor/left = 3
anchor/right = 2
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1.5
margin/bottom = 0.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 4 )
params/resize_mode = 1
params/stretch_mode = 4

[node name="LeftArrow" type="TextureButton" parent="."]

anchor/left = 3
anchor/right = 2
anchor/bottom = 1
rect/scale = Vector2( -1, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1.5
margin/bottom = 0.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 4 )
params/resize_mode = 1
params/stretch_mode = 4

[node name="ArrowAnimator" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/disabled = SubResource( 1 )
anims/enabled = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "disabled"

[connection signal="mouse_enter" from="." to="." method="_on_ArrowsIndicator_mouse_enter"]

[connection signal="mouse_enter" from="RightArrow" to="." method="_on_RightArrow_mouse_enter"]

[connection signal="pressed" from="RightArrow" to="." method="_on_RightArrow_pressed"]

[connection signal="mouse_enter" from="LeftArrow" to="." method="_on_LeftArrow_mouse_enter"]

[connection signal="pressed" from="LeftArrow" to="." method="_on_LeftArrow_pressed"]


